# jw-news-reader

./: Cargo.toml  Dockerfile  README.md
app/: extract.py
src/: extract.rs  main.rs  models.rs
tests/: test_extract.py
