[package]
name = "jw-news-reader-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jw-news-reader-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.22"
regex = "1"
url = "2"
once_cell = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
